<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_level">

    <fragment
        android:id="@+id/navigation_level"
        android:name="nl.idsklijnsma.carlevel.ui.level.LevelFragment"
        android:label="@string/title_level"
        tools:layout="@layout/fragment_level" />

    <fragment
        android:id="@+id/navigation_incline"
        android:name="nl.idsklijnsma.carlevel.ui.incline.InclineFragment"
        android:label="@string/title_incline"
        tools:layout="@layout/fragment_incline" />

    <fragment
        android:id="@+id/navigation_config"
        android:name="nl.idsklijnsma.carlevel.ui.config.ConfigFragment"
        android:label="@string/title_config"
        tools:layout="@layout/fragment_config" />
</navigation>