<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/config"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.config.ConfigFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/device"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="?attr/colorPrimary"
            android:textIsSelectable="false"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:foregroundTint="?attr/colorPrimary"
            android:indeterminateTint="?attr/colorPrimary"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/text_device"
            app:layout_constraintEnd_toEndOf="@+id/text_device"
            app:layout_constraintTop_toTopOf="@+id/text_device" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_devices"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_device" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list_devices"
            tools:layout_editor_absoluteY="99dp" />

        <TableRow
            android:id="@+id/hr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/btnSearch" />

        <TextView
            android:id="@+id/text_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/offset"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="?attr/colorPrimary"
            android:textIsSelectable="false"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hr"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextOffsetX"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/txtLevelX"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_notifications">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputOffsetX"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/offset_x"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtLevelX"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/editTextOffsetX"
            app:layout_constraintStart_toEndOf="@+id/editTextOffsetX"
            app:layout_constraintEnd_toStartOf="@+id/switchInvertX"
            app:layout_constraintTop_toTopOf="@+id/editTextOffsetX"
            app:layout_constraintVertical_bias="0.621" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchInvertX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/invert"
            app:layout_constraintBottom_toBottomOf="@+id/editTextOffsetX"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtLevelX"
            app:layout_constraintTop_toTopOf="@+id/editTextOffsetX" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextOffsetY"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/txtLevelY"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextOffsetX">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputOffsetY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/offset_y"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtLevelY"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:lines="1"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/editTextOffsetY"
            app:layout_constraintEnd_toStartOf="@+id/switchInvertY"
            app:layout_constraintStart_toEndOf="@+id/editTextOffsetY"
            app:layout_constraintTop_toTopOf="@+id/editTextOffsetY" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchInvertY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/invert"
            app:layout_constraintBottom_toBottomOf="@+id/editTextOffsetY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtLevelY"
            app:layout_constraintTop_toTopOf="@+id/editTextOffsetY" />


        <Button
            android:id="@+id/btnZero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/set_offset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextOffsetY"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/spacer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnZero"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnPrivacy"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingHorizontal="0dp"
            android:text="@string/privacy_policy"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spacer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>